--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "eslint": "^4.5.0",
     "eslint-config-synacor": "^1.1.0",
     "if-env": "^1.0.0",
-    "preact-cli": "^1.4.1"
+    "preact-cli": "^1.4.1",
+    "preact-compat-enzyme": "^0.2.5",
+    "preact-jsx-chai": "^2.2.1",
+    "preact-test-utils": "^0.1.3"
   },
   "dependencies": {
     "preact": "^8.2.4",
