--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,19 +1,14 @@
 {
-  "name": "Preact PWA",
-  "short_name": "Preact PWA",
+  "name": "Coder Calculator",
+  "short_name": "Calculator",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#fff",
   "theme_color": "#673ab8",
   "icons": [{
-    "src": "/assets/icons/android-chrome-192x192.png",
-    "type": "image/png",
-    "sizes": "192x192"
-  },
-  {
-    "src": "/assets/icons/android-chrome-512x512.png",
-    "type": "image/png",
-    "sizes": "512x512"
+    "src": "/assets/favicon.ico",
+    "type": "icon/ico",
+    "sizes": "32x32"
   }]
 }
